--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -2,7 +2,7 @@
     height: 100dvh;
     width: 100vw;
     margin: 0;
-    background-image: url('./images/login-background.jpg');
+    background-color: var(--black);
     background-size: 100% 100%;
     display: flex;
     align-items: center;
@@ -22,16 +22,17 @@
     height: 100%;
     width: 100%;
     padding: 0 4%;
-    background-color: white;
+    background-color: var(--black);
     border-radius: 10px;
+    border: 1px solid var(--small);
     box-sizing: border-box;
 }
 
 .signup-head{
     font-size: 40px;
-    font-family: 'Roboto';
+    font-family: 'GSM';
     margin: 20px 5px;
-    color: rgb(26, 139, 232);
+    color: var(--green);
 }
 
 .signup-form{
@@ -54,11 +55,12 @@
     height: 35px;
     width: auto;
     padding: 0px 10px;
-    border: 1px solid rgb(205, 205, 205);
-    background-color: rgb(243, 243, 243);
+    border: 1px solid var(--small);
+    background-color: var(--searchBoxBg);
     font-size: 17px;
+    color: var(--fontColor);
     transition-duration: 0.4s;
-    font-family: 'Roboto';
+    font-family: 'GSM';
 }
 
 .signup-input:focus{
@@ -73,15 +75,12 @@
     border-radius: 5px;
     border: none;
     font-size: 16px;
-    font-family: 'Roboto';
+    font-family: 'GSM';
     font-weight: bold;
-    background-color: rgb(26, 139, 232);
-    color: white;
+    background-color: var(--green);
+    color: var(--black);
     transition-duration: 0.2s;
-}
-
-.signup-btn:hover{
-    background-color: rgb(16, 129, 222);
+    cursor: pointer;
 }
 
 .signup-shopping{
@@ -91,7 +90,7 @@
 .link-to-login{
     text-decoration: none;
     color: rgb(97, 97, 97);
-    font-family: 'Roboto';
+    font-family: 'GSM';
     text-align: center;
 }
 
