--- a/src/login.css
+++ b/src/login.css
@@ -2,7 +2,7 @@
     height: 100dvh;
     width: 100vw;
     margin: 0;
-    background-image: url('./images/login-background.jpg');
+    background-color: var(--black);
     background-size: 100% 100%;
     display: flex;
     align-items: center;
@@ -10,10 +10,10 @@
     flex-direction: column;
     padding: 0 5%;
     box-sizing: border-box;
+    font-family: "GSM";
 }
 
 .login-box{
-
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -24,15 +24,15 @@
     height: 100%;
     width: 100%;
     padding: 0 4%;
-    background-color: white;
+    background-color: var(--black);
+    border: 1px solid var(--small);
     border-radius: 10px;
 }
 
 .login-head{
     font-size: 40px;
-    font-family: 'Roboto';
     margin: 30px 5px;
-    color: rgb(26, 139, 232);
+    color: var(--green);
 }
 
 .login-form{
@@ -56,15 +56,15 @@
     height: 35px;
     width: 100%;
     padding: 0px 10px;
-    border: 1px solid rgb(205, 205, 205);
-    background-color: rgb(243, 243, 243);
+    border: 1px solid var(--small);
+    background-color: var(--searchBoxBg);
     font-size: 17px;
     transition-duration: 0.4s;
-    font-family: 'Roboto';
+    color: var(--fontColor);
 }
 
 .login-input:focus{
-    outline: 1px solid black;
+    outline: 1px solid var(--small);
 }
 
 .login-btn{
@@ -74,16 +74,12 @@
     border-radius: 5px;
     border: none;
     font-size: 16px;
-    font-family: 'Roboto';
     font-weight: bold;
-    background-color: rgb(26, 139, 232);
-    color: white;
+    background-color: var(--green);
+    color: var(--black);
     transition-duration: 0.2s;
+    font-family: 'GSM'
 }
-
-.login-btn:hover{
-    background-color: rgb(16, 129, 222);
-} 
 
 .invalid-email{
     display: none;
@@ -98,7 +94,6 @@
     gap: 5px;
     flex-direction: column;
     color: red;
-    font-family: 'Roboto';
 }
 
 .password-container{
@@ -106,11 +101,9 @@
     gap: 5px;
     flex-direction: column;
     color: red;
-    font-family: 'Roboto';
 }
 
 .link-to-signup{
     text-decoration: none;
     color: rgb(97, 97, 97);
-    font-family: 'Roboto';
 }
