--- a/src/components/NavUserButton.css
+++ b/src/components/NavUserButton.css
@@ -38,12 +38,14 @@
 }
 
 .nub-name{
+    font-size: 1.1rem;
+    letter-spacing: 0.05rem;
     margin: 0;
     color: var(--fontColor);
 }
 
 .nub-btn{
-    font-family: 'GSM';
+    font-family: 'GM';
     height: 30px;
     border-radius: 5px;
     border: none;
