--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -9,8 +9,8 @@
     border: 1px solid var(--small);
     box-sizing: border-box;
     height: fit-content;
-    width: 600px;
-    margin: 1rem 2rem;
+    width: 500px;
+    margin: 1rem 10rem;
 }
 
 .post-heading-container{
@@ -41,7 +41,7 @@
 }
 
 .chat-name{
-    font-family: 'GSB';
+    font-family: 'GB';
     font-size: 1.2rem;
     color: var(--fontColor);
 }
@@ -56,8 +56,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 600px;
-    min-width: 600px;
+    min-height: 500px;
+    min-width: 500px;
+    max-width: 500px;
+    min-height: 500px;
     overflow: hidden;
     background-color: black;
     position: relative;
@@ -65,9 +67,9 @@
 
 .post-media{
     width: 100%;
-    height: 100%;
-    max-height: 600px;
-    max-width: 600px;
+    height: 500px;
+    max-height: 100%;
+    max-width: 100%;
     object-fit: contain;
 }  
 
@@ -123,7 +125,7 @@
 }
 
 .control img{
-    height: 30px;
+    height: 30px;   
 }
 
 .post-btn-container{
@@ -135,7 +137,7 @@
     flex: 1;
     background-color: inherit;
     border: none;
-    font-family: 'GSM';
+    font-family: 'GM';
     height: 40px;
     font-size: 1.2rem;
     display: flex;
