--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -2,8 +2,10 @@
     display: flex;
     background-color: var(--black);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
+    scrollbar-color: var(--small) var(--black); /* thumb, track */
+    scrollbar-width: thin;
 }
 
 .posts-container{
