--- a/src/components/HomeNav.css
+++ b/src/components/HomeNav.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 550px;
     height: 100%;
-    border: 1px solid var(--small);
+    border: 1px solid var(--borderColor);
     border-left: none;
     border-top: none;
     border-bottom: none;
@@ -18,7 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid var(--small);
+    border-bottom: 1px solid var(--borderColor);
 }
 
 .cn-heading{
