--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,7 +11,7 @@
     align-items: center;
     box-sizing: border-box;
     background-color: var(--black);
-    border-right: 1px solid var(--small);
+    border-right: 1px solid var(--borderColor);
     transition: width 0.3s ease; /* smooth slide */
     overflow: hidden;
 }
