--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -6,7 +6,7 @@
     background-color: var(--black);
     border-radius: 10px;
     overflow: hidden;
-    border: 1px solid var(--small);
+    border: 1px solid var(--borderColor);
     box-sizing: border-box;
     height: fit-content;
     width: 500px;
