--- a/src/components/NotificationPanel.css
+++ b/src/components/NotificationPanel.css
@@ -3,7 +3,7 @@
     top: 0;
     right: 0;
     width: 410px;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--black);
     transform-origin: left;
     transform: translateX(100%);
@@ -18,6 +18,15 @@
 .np-container h1{
     font-size: 1rem;
     color: var(--fontColor);
+}
+
+.notifications-container{
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    flex-grow: 1;
+    width: 100%;
+    overflow-y: auto;
 }
 
 @keyframes myMove {
