--- a/src/components/HomeNav.css
+++ b/src/components/HomeNav.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 550px;
-    height: 100%;
+    height: 100vh;
     border: 1px solid var(--borderColor);
     border-left: none;
     border-top: none;
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    overflow: hidden;
 }
 
 .cn-searchbar-container{
@@ -90,4 +91,7 @@
     flex-direction: column;
     gap: 10px;
     flex: 1;
+    overflow-y: auto;
+    scrollbar-color: var(--small) var(--black); /* thumb, track */
+    scrollbar-width: thin;
 }
