--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .nav-container {
-    position: relative;
+    position: sticky;
     top: 0;
     height: 100vh;
     width: 80px;  /* collapsed width */
