--- a/src/components/NavChatButton.css
+++ b/src/components/NavChatButton.css
@@ -3,6 +3,7 @@
     align-items: center;
     width: 100%;
     height: 70px;
+    min-height: 70px;
     gap: 10px;
     border-radius: 5px;
     padding: 0px 5px;
@@ -28,6 +29,10 @@
     border: 1px solid var(--green);
     border-radius: 25px;
     overflow: hidden;
+}
+
+.bg-hover{
+    background-color: var(--hover);
 }
 
 .ncbs-img{
