--- a/src/components/ReactionMenu.css
+++ b/src/components/ReactionMenu.css
@@ -48,6 +48,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  font-family: 'Emoji';
   border-radius: 50%;
   line-height: 1;
   background-color: rgba(255, 255, 255, 0);
