--- a/src/components/HomeNav.css
+++ b/src/components/HomeNav.css
@@ -53,8 +53,13 @@
     height: 20px;
 }
 
+.form{
+    width: 100%;
+}
+
 .cn-search-input{
     height: 100%;
+    width: 100%;
     background-color: inherit;
     border: none;
     flex: 1;
@@ -94,4 +99,23 @@
     overflow-y: auto;
     scrollbar-color: var(--small) var(--black); /* thumb, track */
     scrollbar-width: thin;
+}
+
+.search-heading{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px;
+    box-sizing: border-box;
+}
+
+.search-heading p {
+    color: var(--fontColor);
+    font-size: 1rem;
+}
+
+.search-heading img{
+    height: 20px;
+    cursor: pointer;
 }
