--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+.chat-box-live-chat-container{
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
+
 h2{
   margin: 0;
 }
