--- a/src/components/ChatBox.css
+++ b/src/components/ChatBox.css
@@ -66,6 +66,21 @@
   gap: 10px;
 }
 
+.show-live-chat-btn{
+  height: 35px;
+  width: 35px;
+  border-radius: 40px;
+  background-color: inherit;
+  border: none;
+  display: grid;
+  place-content: center;
+}
+
+.show-live-chat-btn:hover{
+  background-color: var(--hover);
+}
+
+
 .chat-info-btn{
   height: 35px;
   width: 35px;
@@ -112,7 +127,7 @@
 .chat-box {
   position: relative;
   height: 100vh;
-  width: 100%;
+  flex: 1 1 auto;
   background-color: var(--chatBoxBg);
   display: flex;
   flex-direction: column;
